# hydrocron-api

./: .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  README.md  build.sh  build_lambda.py  conftest.py  data.csv  docker-compose.yml  dump.sql  getsubset.csv  gettimeseries.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  python-app.yml  release_created.yml
docker/: Dockerfile  Dockerfile_old  README.md  build-docker.sh  docker-start-command  push-docker-ecr.sh
docs/: _config.yml  _toc.yml  conf.py  examples.md  intro.md  overview.md  subset.rst  time.md  timeseries.rst
hydrocronapi/: __main__.py  hydrocron.py
hydrocronapi/controllers/: lakessubset.py  lakestimeseries.py  subset.py  timeseries.py
hydrocronapi/controllers/db/: db.py  db_local.py  hydrocron_database.py  no_db_local.py
hydrocronapi/data_access/: db.py  hydrocron_database.py
hydrocronapi/data_access/tests/: test_hydrocron_database.py
hydrocronapi/swagger/: swagger.yaml
jenkins/: Jenkinsfile
mysql/: dump.sql
podaac/: __main__.py  encoder.py  util.py
podaac/controllers/: default_controller.py
podaac/models/: base_model_.py
podaac/swagger/: swagger.yaml
podaac/test/: __init__.py  test_default_controller.py
swagger_server/: __main__.py
swagger_server/controllers/: default_controller.py
swagger_server/swagger/: swagger.yaml
swagger_server/test/: test_default_controller.py
terraform/: README.md  alb.tf  db.tf  fargate-iam.tf  fargate.tf  feature-translation-service-main.tf  hydrocron-db.tf  hydrocron-lambda-iam.tf  hydrocron-main.tf  main.tf  network.tf  outputs.tf  s3.tf  variables.tf
terraform/api-specification-templates/: fts_aws_api.yml  hydrocron_aws_api.yml  hydrocron_aws_api_1.yml
terraform/tfvars/: ops.tfvars  sit.tfvars  uat.tfvars
tests/: __init__.py  conftest.py  database_fixtures.py  db.py  example_load_data.py  pytest.ini  test_api.py  test_hydrocron_api.py  test_hydrocron_database  test_hydrocron_database.py
tests/db/: db.py
