[tool.poetry]
name = "plotter-cicd"
version = "1.0.0a5"
description = "Python template project"
authors = ["Vanesa Gomez Gonzalez <vanesa.gomez.gonzalez@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/hydrocron-api"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']
packages = [
    { include = "plotter", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.dev-dependencies]
pytest = "~7"
flake8 = "^3.8"
pytest-cov = "~4"
pylint = "~2"
Sphinx = "^3.3"
connexion = "^2.14.2"
python_dateutil = "^2.6.0"
setuptools = "^67.6.1"
swagger-ui-bundle = "^0.0.9"
pymysql = "^1.0.3"
shapely = "^2.0.1"


[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
