[tool.poetry]
name = "podaac-hydrocron"
version = "1.0.0"
description = "OpenAPI access to Time Series data for SWOT features"
authors = ["PO.DAAC <podaac@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/hydrocron-api"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']

packages = [
    { include = "hydrocronapi" },
]

[tool.poetry.dependencies]
boto3 = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flask-testing = "^0.8.1"
pylint = "^2.4"
flake8 = "^3.7"
pytest-cov = "~4"
pandas = "^2.0.3"

[tool.poetry.scripts]
hydrocronapi = "hydrocronapi.__main__:__main__"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
