[tool.poetry]
name = "hydrocron"
version = "0.0.1"
description = "Hydrocron API - tool for hydrology"
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/hydrocron-api"
exclude = ['contrib', 'docs', 'tests']
packages = [
    { include = "hydrocronapi" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
shapely = "^2.0.1"
boto3 = "^1.28.18"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pylint = "^2.15.8"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"